# claubi

./: .env.example  .gitignore  ARCHITECTURE_NOTES.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
src/: main.rs
src/agents/: executor.rs  mod.rs
src/cli/: mod.rs  parser.rs
src/models/: mod.rs  ollama.rs
src/security/: audit.rs  mod.rs  permissions.rs
src/tools/: mod.rs  shell.rs
