[package]
name = "claubi"
version = "0.1.0"
edition = "2021"
description = "Your Personal AI Engineering Team — Local, Secure, Beautiful."
authors = ["Your Name <your@email.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/YOUR_USERNAME/claubi"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment / config
dotenvy = "0.15"

# Async utilities
async-trait = "0.1"
futures-util = "0.3"
tokio-stream = "0.1"

# Terminal
crossterm = "0.28"
colored = "2"
rustyline = "15"
termimad = "0.31"

# Security - regex for secrets scanning
regex = "1"

# UUID for audit log entries
uuid = { version = "1", features = ["v4"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Directory handling
dirs = "5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
